# python_web_ex8

./: .env.example  pyproject.toml
ex_8/: connect.py  definitions.py  models.py  query.py  search.py  upload_data.py
